--- a/Monitoring/logstash/config/logstash.yml
+++ b/Monitoring/logstash/config/logstash.yml
@@ -3,3 +3,4 @@ node.name: docker-node
 node.master: true
 network.host: 0.0.0.0
 xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+path.config: /usr/share/logstash/config/pipelines.yml
